2000-05-08  Alan Modra  <alan@linuxcare.com.au>

	* objcopy.c (setup_section): Add const and gettext calls for err.

2000-05-02  H.J. Lu  <hjl@gnu.org>

	* readelf.c (get_osabi_name): Handle ELFOSABI_NONE instead of
	ELFOSABI_SYSV. Also handle ELFOSABI_NETBSD, ELFOSABI_HURD,
	ELFOSABI_SOLARIS, ELFOSABI_MONTEREY, ELFOSABI_IRIX,
	ELFOSABI_FREEBSD, ELFOSABI_TRU64, ELFOSABI_MODESTO
	and ELFOSABI_OPENBSD.

2000-05-02  Kazu Hirata  <kazu@hxi.com>

	* coffgrok.c: Add ATTRIBUTE_UNUSED as appropriate.
	* srconv.c: Likewise.
	* sysdump.c: Likewise.

Sun Apr 23 14:23:26 2000  Denis Chertykov  <denisc@overta.ru>

	* readelf.c (guess_is_rela): AVR uses RELA relocations.
	(get_machine_name): machine name for EM_AVR added.

Fri Apr 21 13:20:53 2000  Richard Henderson  <rth@cygnus.com>
			  David Mosberger  <davidm@hpl.hp.com>

	* Makefile.am (readelf.o): Add elf/ia64.h.
	* Makefile.in: Rebuild.
	* readelf.c: Include elf/ia64.h.
	(guess_is_rela, dump_relocations): Handle EM_IA_64.
	
2000-04-17  Timothy Wall  <twall@cygnus.com>

	* objdump.c (disassemble_data): Set octets per byte *after*
	resolving arch/mach for binary files.

2000-04-14  Michael Sokolov  <msokolov@ivan.Harhan.ORG>

	* arlex.l: Add directives to increase lex buffer size.

	* objdump.c, readelf.c: Don't include strarg.h or varargs.h. They are
        already included by bucomm.h.

2000-04-10  Philippe De Muyter  <phdm@macqel.be>

	* readelf (dynamic_segment_mips_val): Call `sprintf', not
	`strftime' since strftime is not available on all systems.
	(process_mips_specific): Ditto.

Fri Apr  7 15:56:57 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
	* configure.in (WARN_CFLAGS): Set to -W -Wall by default.  Add
 	--enable-build-warnings option.
	* Makefile.am (AM_CFLAGS, WARN_CFLAGS): Add definitions.
	* Makefile.in, configure: Re-generate.

2000-04-06  Alan Modra  <alan@linuxcare.com.au>

	* addr2line.c: Update copyright.
	* objcopy.1: Likewise, and title.
	* strings.1: Likewise.
